--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "@nomiclabs/hardhat-ethers": "^2.2.2",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@openzeppelin/hardhat-upgrades": "^1.22.1",
     "@typechain/ethers-v5": "^10.1.0",
@@ -34,6 +34,7 @@
     "ethers": "^5.7.2",
     "hardhat": "^2.14.0",
     "hardhat-contract-sizer": "^2.6.1",
+    "hardhat-deploy": "^0.11.30",
     "hardhat-gas-reporter": "^1.0.9",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
@@ -55,6 +56,7 @@
     "jsrsasign": "^10.6.0",
     "ora": "5.4.1",
     "prompt": "^1.3.0",
+    "prompt-sync": "^4.2.0",
     "readline": "^1.3.0",
     "vm2": "^3.9.18"
   },
